--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -788,7 +788,7 @@ section {
 section #title {
   border: 0;
   outline: none;
-  margin: 0 0 50px 0;
+  margin: 0 0 20px 0;
   padding: 0 0 5px 0;
 }
 section #title h1 {
@@ -804,17 +804,17 @@ section #title p {
   font-size: 18px;
   text-align: center;
 }
-section #title .credits {
+section .credits {
   font-size: 11px;
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #696969;
   margin-top: -10px;
 }
-section #title .credits.left {
+section .credits.left {
   float: left;
 }
-section #title .credits.right {
+section .credits.right {
   float: right;
 }
 
